# slim-image

./: LICENSE  README.md  build-wasm.sh  index.html  package.json
assets/css/: base.css  components.css  layout.css  reset.css
assets/js/: app.js  bytes.js  download.js  image-io.js  score-preview.js  state.js  ui.js  worker-client.js
assets/wasm/: optimizer.d.ts  optimizer.js  optimizer_bg.wasm  optimizer_bg.wasm.d.ts
assets/worker/: optimizer-worker.js
rust/: Cargo.toml
rust/src/: jpeg.rs  lib.rs  pareto.rs  png.rs  rgba.rs  score.rs  search.rs  types.rs  webp.rs
tests/manual/: index.html
tests/unit/: bytes.test.js  index.html  runner.js  score-preview.test.js  state.test.js  test-helpers.js
